tests/models/struct/unnamed/u16/fail/min_items.rs
use dade::model;
#[model]
struct TestModel (
   #[field(min_items = 2)]
    u16
);
fn main() {}
